main.css
.task-card {
    position: relative;
    min-height: 70vh;
    border: 1px solid black;
    border-radius: 20px;
}

.task {
    border: 1px solid black;
    border-radius: 15px;
    margin: 5px;
    padding: 5px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
    position: relative;
}

.add-task {
    position: absolute;
    bottom: 1rem;
    width: 100%;
    cursor: pointer;
}


.search-input {
    position: relative;
    border: 1px solid black;
    border-radius: 25px;
    cursor: pointer;
}

.search-icon {
    max-width: 50px;
    position: absolute;
    right: 1rem;
    cursor: pointer;
}

.action-icon {
    position: absolute;
    right: 1rem;
    max-width: 23px;
    cursor: pointer;
}

.spinner-icon {
    position: absolute;
    right: 1rem;
    max-width: 5vw;
}

.icon-image {
    max-width: 10vw;
}
@media(min-width: 750px){
    .icon-image {
        max-width: 4vw;
    }  
}

